@@ -1,3 +1,8 @@
+Sep 21, 2003
+
+  * ADDED: rdfe_update/4 encapsulation of the new source action for
+    rdf_update/4.
+
 Sep 20, 2003
 
   * FIXED: Unification of source-location
